# dlib

./: .gitignore
dlib/: CMakeLists.txt
dlib/cuda/: cpu_dlib.cpp  cpu_dlib.h  cuda_dlib.cu  cuda_dlib.h  cudnn_dlibapi.cpp  gpu_data.cpp  gpu_data.h  myCuda_tensorToDets.cu  myCuda_tensorToDets.h  tensor.h  tensor_tools.cpp  tensor_tools.h
dlib/dnn/: layers.h  loss.h  trainer.h
dlib/geometry/: point_transforms.h
dlib/image_transforms/: random_cropper.h
myBgSubDnn/: CMakeLists.txt  CMakeLists.txt.save  dnn_semantic_segmentation_ex.cpp  dnn_semantic_segmentation_ex.h  dnn_semantic_segmentation_train_ex.cpp
myCountryPlateRecognizer/: CMakeLists.txt  dnn_co_multi_rec_test.cpp  dnn_countryRec_test.cpp  dnn_countryRecognition-v2.cpp  dnn_countryRecognition-v3.cpp  dnn_countryRecognition-v4.cpp  dnn_countryRecognition.cpp
myPlatesDetector/: CMakeLists.txt  dnn_mmod_find_cars2_ex.cpp  dnn_mmod_find_cars_ex.cpp  dnn_mmod_train_find_plates_model5-skip.cpp  dnn_mmod_train_find_plates_model5.cpp  dnn_mmod_train_plates_classic-dlib-model.cpp  dnn_test_detector.cpp  myUtils.h  test_sp.cpp  train_shape_predictor_ex.cpp
mySemantic/: CMakeLists.txt  dnn_semantic_segmentation_ex.h
myShapePredictor/: CMakeLists.txt  face_landmark_detection_ex.cpp  train_shape_predictor_ex.cpp
